Bug 201982 - Invalid font size in notes widgets and dialogs
Summary: Invalid font size in notes widgets and dialogs
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-07-30 11:22 UTC by Yakov
Modified: 2009-08-01 13:06 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
invalid font size (215.93 KB, image/jpeg)
2009-07-30 11:22 UTC, Yakov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yakov 2009-07-30 11:22:08 UTC
Version:           4.2.98 (using KDE 4.2.98)
OS:                Linux
Installed from:    Ubuntu Packages

In the notes widget there is no way to set font size. Moreover, font size is increasing/decreasing whis widget size changes.

And finally, if you open from notes widget context menu some dialog (Find, for exmaple) - font size in this dialog is set to font size in the widget. See screen shot attached

I think this behaviour is completely wrong and should be fixed in KDE4.3 reelase.
Comment 1 Yakov 2009-07-30 11:22:56 UTC
Created attachment 35731 [details]
invalid font size

screenshot
Comment 2 Dario Andres 2009-07-31 18:33:19 UTC
To customize the font size you have to right click in the borders of the note and select "Notes Settings" or just select the toolbox icon that appears in the black bar at one of the sides when you move the mouse near the Notes widget (with the Plasma widgets unlocked).
I can confirm that the same font size is also used in the Find dialog as example (~some days old 4.4trunk)
Comment 3 Dario Andres 2009-07-31 20:19:10 UTC
To fix the last issue I have uploaded a patch to http://reviewboard.kde.org/r/1191/
Comment 4 Sebastian Kügler 2009-07-31 20:24:32 UTC
You can also change the font size with ctrl+mousewheel :)
Comment 5 Dario Andres 2009-07-31 20:32:29 UTC
SVN commit 1005285 by darioandres:

Use CSS for global formatting to avoid affecting children QFont.
Review by Sebastian Kügler

BUG: 201982


 M  +7 -2      notes.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1005285
Comment 6 Dario Andres 2009-07-31 20:35:50 UTC
SVN commit 1005287 by darioandres:

Backport to 4.3:
SVN commit 1005285 by darioandres:

Use CSS for global formatting to avoid affecting children QFont.
Review by Sebas

CCBUG: 201982


 M  +7 -2      notes.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1005287
Comment 7 Yakov 2009-08-01 06:39:17 UTC
ok, the font size can be customized.
But i wonder why is default behaviour is scaling font instead of keep fixed size? I think the dafault option must be keep fixed font size, because in most cases you change the size of notes widget to make more text fit in the widget
Comment 8 Sebastian Kügler 2009-08-01 13:06:25 UTC
When I need more text displayed in the widget, I usually change the font size, it's easy enough to do so, and in combination with the sizing powerful enough. You can easily switch to "don't scale automatically" in the config dialogue of course.