Use CSS for global formatting to avoid affecting children QFont. Review by Sebastian Kügler

BUG: 201982

svn path=/trunk/KDE/kdeplasma-addons/; revision=1005285